[WIT-2829] Implement the sync java tech adapter framework
# New features and improvements

* Implements support for synchronous validation, provisioning, unprovisioning, update ACL and reverse provisioning on the framework
* Provides autoconfiguration for ProvisionConfiguration and ValidationConfiguration classes with a failure behaviour, overridable by the user.
* Provides `ComponentClassProviderImpl` and `SpecificClassProviderImpl` as base implementations of their interfaces to easily bootstrap simple use-cases Tech Adapters.
* Provides a guide on how to bootstrap a brand new Tech Adapter, and how to migrate existing Tech Adapters that are based on the old Java Scaffold project.

# Related issue

Closes WIT-2829

# Definition of Done

So you are going to put your MR in review, but are you sure you have done all things listed here?

## All Developments

- [x] **Feature was implemented as per the requirements**
- [x] **If some code parts are complex they must be commented with code documentation**
- [x] **Unit, integration and E2E tests have been performed and code coverage is not reduced**, so that new code is covered
- [x] **CI/CD is successful**
- [x] **Exceptions and errors are handled, returning meaningful errors to the user**, without letting the underlying framework to respond with a generic Internal Server Error. Technical details are stored in the errors/problems and not in the user message
- [x] **Documentation (user documentation, HLD and others) has been updated**
  - Documentation has been updated with explanation of the new feature if it's user-facing (e.g. component now has additional setting) or it impacts them in some other way (e.g. optional field that becomes mandatory)
  - If it is a breaking change, we have documented it as such in the MR description in a "Breaking Changes" section
- [x] **Helm chart and other DevOps artifacts** have been updated and are valid deployment tools for the new version
- [x] **Problematic information (sensitive inform